--- a/style.css
+++ b/style.css
@@ -58,11 +58,13 @@ body{
       display: flex;
       justify-content: space-evenly;
       align-items: center;
-      /* flex-flow: wrap; */
+      flex-flow: wrap;
       text-decoration: none;
       background-color: mintcream;
       border: 1px white outset;
-      height: 20vh;
+      height: auto;
+      align-content: flex-start;
+      justify-content: flex-start;
   }
   .pic{
       width: 50px;
@@ -104,7 +106,7 @@ margin-left: 4vh;
 
   .secondrow{
     background-color: mintcream;
-      height: 20vh;
+      height: auto;
       display: flex;
       justify-content: space-evenly;
       flex-wrap: wrap;
