--- a/style.css
+++ b/style.css
@@ -11,25 +11,30 @@ body{
 }
 .mainhedder{
     width: 100%;
-    height: 11vh;
+    height: auto;
     background-color: #2e76fc;
-    position: fixed;
-    top: 0px;
-    
+     /* position: fixed ;
+    top: 0px;  */
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
    align-items: center;  
+   flex-wrap: wrap;
+   
+   
     
 }
+.logo{
+    width: 100px;
+}
   .search{
-      width: 230px;
+      width: 200px;
       height: 35px;
       margin-left: 10px;
   }
   .login{
       width: 100px;
       height: 30px;
-      margin-left: 30px;
+      margin-left: 20px;
       color: #2e76fc;
       
       font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -38,13 +43,13 @@ body{
       background-color: #2e76fc;
       color: whitesmoke;
       text-align: center;
-      margin-left: 30px;
+      /* margin-left: 10vh; */
       height: 30px;
       font-family: Verdana, Geneva, Tahoma, sans-serif;
 
   }
   .Cart{
-      margin : 20px;
+      margin : 10px;
       font-size: 1.0rem;
       color: whitesmoke;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -52,29 +57,28 @@ body{
   }
  
   .firstrow{
-     
-      margin: 12vh 0vh 1vh 0vh;
-    
-      display: flex;
-      justify-content: space-evenly;
+     display: flex;
+      justify-content: space-around;
+      justify-items: flex-start;
       align-items: center;
+      align-content: flex-start;
       flex-flow: wrap;
       text-decoration: none;
       background-color: mintcream;
       border: 1px white outset;
       height: auto;
-      align-content: flex-start;
-      justify-content: flex-start;
+      margin: 1px 0px 1px 0px;
   }
   .pic{
-      width: 50px;
+      width: 70px;
       height: 60px;
-      text-align: center;
+      /* text-align: center; */
   }
 
   .heddings{
     text-align: center;
     word-wrap: break-word;
+    margin-bottom: 10px;
   }
 
   .main-slide{
@@ -109,13 +113,15 @@ margin-left: 4vh;
       height: auto;
       display: flex;
       justify-content: space-evenly;
+      justify-items: flex-start;
       flex-wrap: wrap;
       align-items: center;
       border: 1px whitesmoke outset;
   }
   .pic-1{
-      width: 50px;
+      width: 70px;
       height: 60px;
+      margin : 10px 0px 0px 10px;
   }
   .Mensfootwear{
 
