--- a/style.css
+++ b/style.css
@@ -9,52 +9,43 @@ body{
     font-size: 10px;
     background-image: url(./images/background.jfif);
 }
-.mainhedder{
+.navbar{
+    background-color: darkblue;
     width: 100%;
     height: auto;
-    background-color: #2e76fc;
-     /* position: fixed ;
-    top: 0px;  */
-    display: flex;
-    justify-content: space-evenly;
-   align-items: center;  
+   display: flex;
    flex-wrap: wrap;
-   
-   
+   justify-content: space-evenly;
+   align-items: center;
+   position: relative;
+}
+
+.logo img{
+    width: 50px;
+    height: 30px;
+}
+.login{
     
 }
-.logo{
-    width: 100px;
+.cart{
+    color: whitesmoke;
+    font-size: 20px;
+    font-family:sans-serif ;
+    /* border: 2px solid red; */
+    padding: 0px 15px;
+  
 }
-  .search{
-      width: 200px;
-      height: 35px;
-      margin-left: 10px;
-  }
-  .login{
-      width: 100px;
-      height: 30px;
-      margin-left: 20px;
-      color: #2e76fc;
-      
-      font-family: Verdana, Geneva, Tahoma, sans-serif;
-  }
-  #More{
-      background-color: #2e76fc;
-      color: whitesmoke;
-      text-align: center;
-      /* margin-left: 10vh; */
-      height: 30px;
-      font-family: Verdana, Geneva, Tahoma, sans-serif;
+.search input {
+    width: 250px;
+    
+   
+}
+.search-icon{
+    position: absolute;
+    left: 0px;
+}
 
-  }
-  .Cart{
-      margin : 10px;
-      font-size: 1.0rem;
-      color: whitesmoke;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
 
-  }
  
   .firstrow{
      display: flex;
@@ -70,7 +61,7 @@ body{
       margin: 1px 0px 1px 0px;
   }
   .pic{
-      width: 70px;
+      width: 60px;
       height: 60px;
       /* text-align: center; */
   }
@@ -85,12 +76,13 @@ body{
       display: flex;
       justify-content: center;
       align-items: center;
-      /* height: 100vh;
-      width: 100%; */
+      /* height: 100vh; */
+      /* width: 100%; */
 
   }
   .slid{
-      
+      width: 100%;
+  
 
   }
   .Dealoftheday{
@@ -123,13 +115,22 @@ margin-left: 4vh;
       height: 60px;
       margin : 10px 0px 0px 10px;
   }
-  .Mensfootwear{
-
-  }
-  .Mens-img{
-
-  }
   
+
+
+  /* foooter design */
+
+  .footer-container{
+      background-color: rgba(0, 0, 0, 0.836);
+      width: 100%;
+      height: auto;
+      display: flex;
+      color: whitesmoke;
+      justify-content: space-around;
+      /* align-items: center; */
+      line-height: 20px;
+      
+  }
 
 
 
